# In-Line

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.renderer.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: generate_icons.py
src/: App.tsx  FloatingWindow.tsx  QuickAddWindow.tsx  api.ts  main.tsx  recovery.css  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  lib.rs  main.rs  models.rs
src/components/: AboutPanel.tsx  ComboInput.tsx  DeadlinePicker.tsx  MultiContactInput.tsx  SettingsPanel.tsx  StatusBadge.tsx  TaskContextMenu.tsx  TaskDetail.tsx  TaskForm.tsx  TaskTableFilter.tsx  TicketNumber.tsx
src/lib/: task-filters.ts  task-utils.ts  ticket-image.ts
tests/: task-utils.test.ts
